# SoftwareTesting

./: Kata_Bowling_TDD.ipynb  README.md  Software_Testing_ClassEquivalation.ipynb  Software_Testing_Coverage.ipynb  Teste_de_Mutação_com_o_PODEROSO_MutPy.ipynb
AutomatedTests/: CMakeLists.txt  tst_triangle.cpp
Junit/Poligonos/: .classpath  .project  Poligonos.eml
Junit/Poligonos/src/Poligonos/: Ponto2D.java  Testes.java  Triangulo.java
KissFrame/: KissFrame.py  kiss_frame.py  test_KissFrame.py
KissFrame/ncbr2/: KissFrame.py  test_KissFrame.py
KissFrame/ncbr2/MUTATED/: KissFrame.py  test_KissFrame.py
Poligonos/: Ponto2D.py  Triangulo.py
